# student_room

./: .gitignore  CLAUDE.md  PERFORMANCE_GUIDE.md  README.md  config.py  init_data.py  main.py  pyproject.toml  requirements.txt  ruff.toml  start_app.py
.claude/: settings.local.json
app/forms/: __init__.py  auth.py  booking.py
app/models/: __init__.py  admin.py  booking.py  student.py  study_room.py  user.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: _helpers.html  about.html  contact.html  help.html  index.html  room_detail.html  rooms_list.html
app/templates/admin/: add_user.html  announcements.html  bookings.html  dashboard.html  edit_user.html  export.html  room_seats.html  rooms.html  users.html
app/templates/auth/: change_password.html  forgot_password.html  login.html  profile.html  register.html  register_new.html
app/templates/booking/: book_seat.html  my_bookings.html  select_room.html  select_seats.html
app/templates/common/: base.html  no_nav.html  optimized_base.html
app/templates/errors/: 404.html  500.html
app/templates/main/: help.html  index.html
app/templates/student/: book_seat.html  dashboard.html  my_bookings.html  profile.html  rooms.html
app/utils/: init_complete_data.py
config/: config.py
instance/: study_room.db
