[project]
name = "study-room"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "wtforms>=3.1.1",
    "python-dotenv>=1.0.0",
    "flask-migrate>=4.0.7",
    "werkzeug>=3.0.1",
    "flask-mail>=0.10.0",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
